--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     <main>
         <section class="conteudo2">
                 <picture>
-                    <source media="(min-width: 450px)" srcset="/assets/images/Section_Image.png">
-                    <img class="imagem-conteudo" src="/assets/images/Section_Image_celular.png" alt="imagem_conteudo">
+                    <source media="(min-width: 450px)" srcset="assets/images/Section_Image.png">
+                    <img class="imagem-conteudo" src="assets/images/Section_Image_celular.png" alt="imagem_conteudo">
                 </picture>
             <section class="texto1">
                 <h1>Crie um espaço controlado por convite onde você se sinta em casa</h1>
@@ -41,14 +41,14 @@
                 <p>Entre no canal de voz quando estiver à toa. Amigos no mesmo servidor podem te ver e entrar imediatamente, sem nem ter que fazer a chamada.</p>
             </section>
                 <picture>
-                    <source media="(min-width: 450px)" srcset="/assets/images/Section_Image1.png">
-                    <img class="imagem-conteudo" src="/assets/images/Section_Image1_Celular.png" alt="imagem_conteudo">
+                    <source media="(min-width: 450px)" srcset="assets/images/Section_Image1.png">
+                    <img class="imagem-conteudo" src="assets/images/Section_Image1_Celular.png" alt="imagem_conteudo">
                 </picture>
         </section>
         <section class="conteudo4">
             <picture>
-                <source media="(min-width: 450px)" srcset="/assets/images/Section_Image2.png">
-                <img class="imagem-conteudo" src="/assets/images/Section_Image_2_celular.png" alt="imagem_conteudo">
+                <source media="(min-width: 450px)" srcset="assets/images/Section_Image2.png">
+                <img class="imagem-conteudo" src="assets/images/Section_Image_2_celular.png" alt="imagem_conteudo">
             </picture>
             <section class="texto3">
                 <h1>Para poucos e para muitos</h1>
@@ -61,14 +61,14 @@
                 <p>Voz e vídeo de baixa latência, para você conversar como se estivesse na mesma sala. Dê um joinha por vídeo, veja amigos transmitirem a jogatina do dia ou junte uma galera pra desenhar na tela compartilhada.</p>
             </section>
             <picture>
-                <source media="(min-width: 450px)" srcset="/assets/images/Section_Image3.png">
-                <img class="imagem-conteudo" src="/assets/images/Section_Image_3_celular.png" alt="imagem_conteudo">
+                <source media="(min-width: 450px)" srcset="assets/images/Section_Image3.png">
+                <img class="imagem-conteudo" src="assets/images/Section_Image_3_celular.png" alt="imagem_conteudo">
             </picture>
         </section>
     </main>
     <footer>
         <section class="rodape">
-            <img src="/assets/images/Frame_1.png" alt="rodape">
+            <img src="assets/images/Frame_1.png" alt="rodape">
         </section>
     </footer>
 </body>
