--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" origem cruzada>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="folha de estilo">
@@ -27,8 +27,8 @@
     <main>
         <section class="conteudo2">
                 <picture>
-                    <source media="(min-width: 450px)" srcset="assets/images/Section_Image.png">
-                    <img class="imagem-conteudo" src="assets/images/Section_Image_celular.png" alt="imagem_conteudo">
+                    <source media="(min-width: 450px)" srcset="./assets/images/Section_Image.png">
+                    <img class="imagem-conteudo" src="./assets/images/Section_Image_celular.png" alt="imagem_conteudo">
                 </picture>
             <section class="texto1">
                 <h1>Crie um espaço controlado por convite onde você se sinta em casa</h1>
@@ -41,14 +41,14 @@
                 <p>Entre no canal de voz quando estiver à toa. Amigos no mesmo servidor podem te ver e entrar imediatamente, sem nem ter que fazer a chamada.</p>
             </section>
                 <picture>
-                    <source media="(min-width: 450px)" srcset="assets/images/Section_Image1.png">
-                    <img class="imagem-conteudo" src="assets/images/Section_Image1_Celular.png" alt="imagem_conteudo">
+                    <source media="(min-width: 450px)" srcset="./assets/images/Section_Image1.png">
+                    <img class="imagem-conteudo" src="./assets/images/Section_Image1_Celular.png" alt="imagem_conteudo">
                 </picture>
         </section>
         <section class="conteudo4">
             <picture>
-                <source media="(min-width: 450px)" srcset="assets/images/Section_Image2.png">
-                <img class="imagem-conteudo" src="assets/images/Section_Image_2_celular.png" alt="imagem_conteudo">
+                <source media="(min-width: 450px)" srcset="./assets/images/Section_Image2.png">
+                <img class="imagem-conteudo" src="./assets/images/Section_Image_2_celular.png" alt="imagem_conteudo">
             </picture>
             <section class="texto3">
                 <h1>Para poucos e para muitos</h1>
@@ -61,14 +61,14 @@
                 <p>Voz e vídeo de baixa latência, para você conversar como se estivesse na mesma sala. Dê um joinha por vídeo, veja amigos transmitirem a jogatina do dia ou junte uma galera pra desenhar na tela compartilhada.</p>
             </section>
             <picture>
-                <source media="(min-width: 450px)" srcset="assets/images/Section_Image3.png">
-                <img class="imagem-conteudo" src="assets/images/Section_Image_3_celular.png" alt="imagem_conteudo">
+                <source media="(min-width: 450px)" srcset="./assets/images/Section_Image3.png">
+                <img class="imagem-conteudo" src="./assets/images/Section_Image_3_celular.png" alt="imagem_conteudo">
             </picture>
         </section>
     </main>
     <footer>
         <section class="rodape">
-            <img src="assets/images/Frame_1.png" alt="rodape">
+            <img src="./assets/images/Frame_1.png" alt="rodape">
         </section>
     </footer>
 </body>
